@@ -3169,9 +3169,14 @@ function RefreshUtilities()
 				status=item.Data + " (" + item.Quality + ")";
 				bigtext=item.Data;
             }
-            else if (item.Type == "Moisture") {
+            else if (item.SubType == "Soil Moisture") {
 				img='<img src="images/moisture48.png" height="48">';
 				status=item.Data + " (" + item.Desc + ")";
+				bigtext=item.Data;
+            }
+            else if (item.SubType == "Leaf Wetness") {
+				img='<img src="images/leaf48.png" height="48">';
+				status=item.Data;
 				bigtext=item.Data;
             }
             else if (item.Type == "Lux") {
@@ -3302,7 +3307,10 @@ function ShowUtilities()
 				else if (item.Type == "Air Quality") {
 				  xhtm+=item.Data;
 				}
-				else if (item.Type == "Moisture") {
+				else if (item.SubType == "Soil Moisture") {
+				  xhtm+=item.Data;
+				}
+				else if (item.SubType == "Leaf Wetness") {
 				  xhtm+=item.Data;
 				}
 				else if (item.Type == "Lux") {
@@ -3333,9 +3341,13 @@ function ShowUtilities()
               xhtm+='air48.png" height="48"></td>\n';
               status=item.Data + " (" + item.Quality + ")";
             }
-            else if (item.Type == "Moisture") {
+            else if (item.SubType == "Soil Moisture") {
               xhtm+='moisture48.png" height="48"></td>\n';
-              status=item.Data + " (" + item.Desc + ")";;
+              status=item.Data + " (" + item.Desc + ")";
+            }
+            else if (item.SubType == "Leaf Wetness") {
+              xhtm+='leaf48.png" height="48"></td>\n';
+              status=item.Data;
             }
             else if (item.Type == "Lux") {
               xhtm+='lux48.png" height="48"></td>\n';
@@ -3401,8 +3413,8 @@ function ShowUtilities()
 				xhtm+='<a class="btnsmall" onclick="EditUtilityDevice(' + item.idx + ',\'' + item.Name + '\');" data-i18n="Edit">Edit</a> ';
 			}
 		  }
-		  else if (item.Type == "Moisture") {
-			xhtm+='<a class="btnsmall" onclick="ShowGeneralGraph(' + item.idx + ',\'' + item.Name+ '\',' + item.SwitchTypeVal +', \'Moisture\');" data-i18n="Log">Log</a> ';
+		  else if ((item.SubType == "Soil Moisture")||(item.SubType == "Leaf Wetness")) {
+			xhtm+='<a class="btnsmall" onclick="ShowGeneralGraph(' + item.idx + ',\'' + item.Name+ '\',' + item.SwitchTypeVal +', \'' + item.SubType + '\');" data-i18n="Log">Log</a> ';
 			if (window.my_config.userrights==2) {
 				xhtm+='<a class="btnsmall" onclick="EditUtilityDevice(' + item.idx + ',\'' + item.Name + '\');" data-i18n="Edit">Edit</a> ';
 			}
