@@ -3,6 +3,8 @@ Version 1.0.xxx (August xxth 2013)
 - Fixed: buttons add sensor/switch buttons now hidden for 'viewer' users
 - Implemented: option in settings for basic-auth login type
 - Changed: Logout button now placed under setup for users with admin rights
+- Changed: Soil Moister sensor type moved as subtype of general sensors
+- Implemented: Leaf Wetness sensor
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
